Footnotes scroll, header is correctly aligned vertically

--- a/src/components/AnnotationContainer.module.css
+++ b/src/components/AnnotationContainer.module.css
@@ -1,6 +1,7 @@
 .annotationContainer {
   width: 500px;
   max-width: calc(100% - 40px);
+  max-height: 50%;
   bottom: 20px;
   right: 20px;
   position: fixed;
@@ -12,6 +13,7 @@
   padding-bottom: 15px;
   box-sizing: border-box;
   border-radius: 5px;
+  overflow-y: scroll;
 }
 
 .annotationTitle {
