--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -17,6 +17,12 @@
   color: black;
 }
 
+.backButtonContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .backButton {
   font-size: 20px;
 }
