--- a/src/components/Homepage.module.css
+++ b/src/components/Homepage.module.css
@@ -62,6 +62,3 @@
 .articleList {
   margin-top: 40px;
 }
-
-.introBlurb {
-}
